--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.chumbokit.doctor.project_final_years">
 
-    <!--<application
+    <!--
+    <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -16,12 +17,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>-->
+    </application>
+    -->
 
-    <uses-permission android:name="android.permission.INTERNET">
-
-    </uses-permission>
-
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
 
     <application
         android:allowBackup="true"
@@ -47,14 +46,9 @@
             android:label="@string/title_activity_home"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".MyAppointment"
-            android:label="@string/my_appointment" />
-        <activity
-            android:name=".CreateAppointment"
-            android:label="@string/create_appointment" />
-        <activity
-            android:name=".MyPrescription"
-            android:label="@string/my_prescription"></activity>
+            android:name=".employees"
+            android:label="@string/title_activity_employees"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
