--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -75,7 +75,8 @@
         <activity
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps" />
-        <activity android:name=".CallLogs.CallLogs"></activity>
+        <activity android:name=".CallLogs.CallLogs" />
+        <activity android:name=".LoginEmployee"></activity>
     </application>
 
 </manifest>
