--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -76,6 +76,16 @@
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps" />
         <activity android:name=".CallLogs.CallLogs"></activity>
+        <activity
+            android:name=".LoginEmployee"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen" />
+        <activity
+            android:name=".RegistrationEmployee"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen" />
+        <activity
+            android:name=".EmployeeHome"
+            android:label="@string/title_activity_employee_home"
+            android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
 </manifest>
