--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,5 +39,6 @@ dependencies {
     implementation 'com.android.support:cardview-v7:26.0.0'
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.google.android.gms:play-services:11.0.4'
+    implementation 'com.github.monirozzaman:BasicUtil:1.0.0'
 }
 apply plugin: 'com.google.gms.google-services'
