--- a/build.gradle
+++ b/build.gradle
@@ -21,9 +21,9 @@ allprojects {
     repositories {
         google()
         jcenter()
-      /*  maven{
-            url "https://maven.fabric.io/public"
-        }*/
+     maven{
+            url "https://jitpack.io"
+        }
 
     }
 }
