--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 26
     defaultConfig {
-        applicationId "com.chumbokit.doctor.doctorappointment"
+        applicationId "com.itvillageltd.emphoyee.project_final_years"
         minSdkVersion 16
         targetSdkVersion 26
         versionCode 1
