--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,38 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.chumbokit.doctor.project_final_years">
+    package="com.itvillageltd.emphoyee.tracker">
 
     <uses-permission android:name="android.permission.READ_CALL_LOG" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.WRITE_CALL_LOG" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <!--
-    <application
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-    </application>
-    -->
-
-    <uses-permission android:name="android.permission.INTERNET" />
-
-    <!--
-         The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
-         Google Maps Android API v2, but you must specify either coarse or fine
-         location permissions for the 'MyLocation' functionality. 
-    -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
 
     <application
         android:allowBackup="true"
@@ -42,7 +18,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name="com.itvillageltd.emphoyee.tracker.MainActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -51,52 +27,40 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".RegisterActivity"
+            android:name="com.itvillageltd.emphoyee.tracker.RegisterActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen" />
         <activity
-            android:name=".HomeActivity"
+            android:name="com.itvillageltd.emphoyee.tracker.HomeActivity"
             android:label="@string/title_activity_home"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".employees"
+            android:name="com.itvillageltd.emphoyee.tracker.EmployeeListActivity"
             android:label="@string/title_activity_employees"
             android:theme="@style/AppTheme.NoActionBar" />
-        <!--
-             The API key for Google Maps-based APIs is defined as a string resource.
-             (See the file "res/values/google_maps_api.xml").
-             Note that the API key is linked to the encryption key used to sign the APK.
-             You need a different API key for each encryption key, including the release key that is used to
-             sign the APK for publishing.
-             You can define the keys for the debug and release targets in src/debug/ and src/release/. 
-        -->
+        <activity
+            android:name="com.itvillageltd.emphoyee.tracker.MapsActivity"
+            android:label="@string/title_activity_maps" />
+        <activity
+            android:name="com.itvillageltd.emphoyee.tracker.LoginEmployeeActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen" />
+        <activity
+            android:name="com.itvillageltd.emphoyee.tracker.RegistrationEmployeeActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen" />
+        <activity
+            android:name="com.itvillageltd.emphoyee.tracker.EmployeeHomeActivity"
+            android:label="@string/title_activity_employee_home"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name="com.itvillageltd.emphoyee.tracker.AssignTaskActivity" />
+        <activity android:name="com.itvillageltd.emphoyee.tracker.EmployeeTaskListActivity" />
+        <activity android:name="com.itvillageltd.emphoyee.tracker.EmployeePerformanceActivity"></activity>
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
-
-        <activity
-            android:name=".MapsActivity"
-            android:label="@string/title_activity_maps" />
-        <activity android:name=".CallLogs.CallLogs" />
-        <activity
-            android:name=".LoginEmployee"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen" />
-        <activity
-            android:name=".RegistrationEmployee"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen" />
-        <activity
-            android:name=".EmployeeHome"
-            android:label="@string/title_activity_employee_home"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".AssignTaskActivity" />
-
         <meta-data
             android:name="android.support.VERSION"
             android:value="25.3.1"
             tools:replace="android:value" />
-
-        <activity android:name=".EmployeeTasksShow" />
-        <activity android:name=".EmployeeTaskListActivity" />
-        <activity android:name=".EmployeePerformanceActivity"></activity>
     </application>
 
 </manifest>
